CSS adjustments for Overlay, removed Dry Top submap

--- a/help.html
+++ b/help.html
@@ -52,6 +52,8 @@
 2014 April 23 - Project resumed with updated stats<br />
 2014 May 15 - Site beta<br />
 2014 June 1 - Gone gold<br />
+2014 June 18-22 - Multilingualism, concurrent chains, simple mode<br />
+2014 July 12 - Overlay desktop app released<br />
 </p>
 
 <hr />
@@ -120,6 +122,8 @@
 
 <header id="headerHelp_Legacy" class="jsSection"><img src="img/event/boss.png" alt="Legacy Bosses" />Legacy Bosses</header>
 <section>
+<p>These bosses give the same rewards as scheduled world bosses, but their chains do not start at a set time--they are asynchronous depending on the megaserver instance (like any regular events). You have to check the places they happen and ask map chat when the chain was last finished so you can wait for it to restart.</p>	
+
 <h2>Fire Shaman</h2>
 <p>Jump through a <ins data-coord="[27494, 9876]">crevice</ins> in the obsidian wall to get to the boss. His phases are as follows: Minions -&gt; Boss -&gt; Minions -&gt; Boss -&gt; Minions -&gt; Boss. You can attack the boss normally, but during the minions phase, you have to kill enough minions for the boss to be attackable again. There is a hidden mechanic (or bug) where stepping near the giant <ins data-coord="[27415, 9639]">Fire Elemental</ins> will cause the event's progress to reset, so people should stay and kill minions near the heal bubble the charr allies made. Crossing the fire lines or attacking the boss is okay as long as nobody touches the giant Fire Elemental, but you should not take this chance as ignorant players will follow you and bungle it. This chain restarts after 25-35 minutes. (D15-25)</p>
 
