--- a/map.html
+++ b/map.html
@@ -253,7 +253,8 @@ var GW2T_COLLECTIBLE_DATA = {
 	{
 		name: "Coin Collector",
 		color: "yellow",
-		wiki: "http://wiki.guildwars2.com/wiki/Dry_Top_(achievements)",
+		wiki: "http://wiki.guildwars2.com/wiki/Lost_coin",
+		credit: "http://dulfy.net/2014/07/01/gw2-coin-collector-prospect-valley-achievement-guide/",
 		needles: [
 		{n: 1, c: [5525, 16723]},
 		{n: 2, c: [5413, 16656]},
@@ -292,6 +293,7 @@ var GW2T_COLLECTIBLE_DATA = {
 		name: "Dive Master",
 		color: "cyan",
 		wiki: "http://wiki.guildwars2.com/wiki/Diving_Goggles",
+		credit: "http://dulfy.net/2012/11/05/gw2-dive-master-achievement-guide/",
 		needles: [
 		{n: 1, c: [15607, 15318]},
 		{n: 2, c: [13146, 15900]},
@@ -438,6 +440,7 @@ var GW2T_COLLECTIBLE_DATA = {
 	<dt data-coord="[22587, 15535]">Outcast's Cleft</dt><dd>Shiverpeaks-Wayfarer svanirs</dd>
 	<dt data-coord="[23136, 13562]">Grawlenfjord</dt><dd>Shiverpeaks-Wayfarer arctodus and barracudas</dd>
 	<dt data-coord="[27618, 15147]">Windrock Maze</dt><dd>Ascalon-Ashford various mobs</dd>
+	<dt data-coord="[26956, 9562]">Rebel's Seclusion</dt><dd>Ascalon-Fireheart wolves and allies</dd>
 	<dt data-coord="[11729, 28750]">Desmina's Hallows</dt><dd>Orr-Cursed risens</dd>
 </dl>
 <br />
@@ -576,7 +579,7 @@ Rich and T6 nodes reset in about 22 hours after gathering; T1-T5 nodes reset in 
 	 >Jumping Puzzles</var>
 </header>
 <section>
-<p>The JP map icons point to the entrance. Click on a checkbox here or a JP icon on the map to check off a JP. Double click a JP icon to zoom in/out.<br />Links: [Y]outube [W]iki.</p>
+<p>The JP map icons point to the entrance. Click on a checkbox here or a JP icon on the map to check off a JP. Double click a JP icon to zoom in/out.<br /><strong>Links:</strong> [Y]outube [W]iki.</p>
 <button id="mapToggle_JP" class="cssRight">Toggle Icons</button>
 
 <div class="mapLinks">
@@ -653,12 +656,12 @@ A marathon of intricate jumps.
 	>Collectible Items</var>
 </header>
 <section>
-
 <div style="width:100%;height:32px"><button id="mapToggle_Collectible" class="cssRight">Toggle Icons</button></div>
 <div id="mapCollectibleList"></div>
 <br />
 <p>Many achievements require you to go around the world to collect or interact with scattered or hidden landmarks or items. These are some of them, including the current Living Story ones if available. When in game, hold the Ctrl key to see the item's name appear.</p>
-<p>Every type of collectible is its own checklist. The map markers can be clicked three times to alternate between three ring colors representing an <em>Unfound</em>, <em>Tracked</em>, and <em>Found</em> state. Click Uncheck All to reset the rings for that collectible type.</p>
+<p>Every type of collectible is its own checklist. The map markers can be clicked three times to alternate between three ring colors representing an <em>Unfound</em>, <em>Tracked</em>, and <em>Found</em> state. Click Reset for all the rings of that collectible type to be Unfounded again.</p>
+<p><strong>Links:</strong> [Y]outube [W]iki [C]redit</p>
 </section>
 
 
