--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="google-site-verification" content="hPcBd74DxlBzpTu6wO6DkIcOVFLu9SOMT-GQ1MI3fbg" />
 
 	<!-- Stylesheets -->
-	<link rel="shortcut icon" type="image/x-icon" href="img/event/boss.png" />
+	<link rel="shortcut icon" type="image/x-icon" href="img/ui/favicon.png" />
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
 	<link rel="stylesheet" media="screen" href="gw2t.css" />
 	
@@ -59,10 +59,15 @@
 				<input id="mapCoordinatesStatic" type="text" />
 				<input id="mapCoordinatesRegion" type="text" />
 			</div>
-			<div id="itemMapButtons">
-				<a class="linkExternal" title="<dfn>Go to Forum</dfn>" href="http://forum.renaka.com/forum/368355/">gw2timer.com /</a>
+			<div id="itemMapLinksNorth" class="itemMapLinks">
+				<a class="linkExternal" title="<dfn>Go to Forum</dfn>" href="http://forum.renaka.com/forum/368355/">news /</a>
 				<a id="linkModeSimple" title="<dfn>Switch to Simple Clock Mode</dfn>" href="./?mode=Simple">simple mode</a>
 				<img title="<dfn>Toggle Right Panel</dfn>" id="mapCompassButton" src="img/map/compass.png" alt="compass" />
+			</div>
+			<div id="itemMapLinksSouth" class="itemMapLinks">
+				<a class="linkExternal" title="<dfn>Download the app to run GW2Timer inside Guild Wars 2!</dfn>" href="http://forum.renaka.com/topic/5546166/">
+					<img id="itemLogo" src="img/ui/logo.png" alt="Overlay Application" />gw2timer.com <u>overlay</u>
+				</a>
 			</div>
 		</section>
 	</div><!-- End of panelLeft -->
@@ -118,8 +123,12 @@
 							<feMergeNode in="SourceGraphic"/> 
 						</feMerge>
 					</filter>
+					<linearGradient id="clkGradientCircumference" x1="0%" y1="0%" x2="0%" y2="100%" spreadMethod="pad">
+						<stop offset="0%"   stop-color="#555" stop-opacity="1"/>
+						<stop offset="100%" stop-color="#111" stop-opacity="1"/>
+					</linearGradient>
 				</defs>
-				<circle id="clkCircumference" cx="50" cy="50" r="45" filter="url(#clkFilterShadowOuter)" />
+				<circle id="clkCircumference" cx="50" cy="50" r="45" filter="url(#clkFilterShadowOuter)" style="stroke:url(#clkGradientCircumference)" />
 				<path id="clkSector" d="M50,50 L50,6 A44,44 0,0 1 94,50 z" /><!-- 1/4 slice of a circle -->
 				<g id="clkTicks"><!-- 12 hour tick marks -->
 					<line x1="50.00" y1="5.00" x2="50.00" y2="10.00" />
@@ -251,7 +260,6 @@
 			<article id="layerOptions">
 				<div class="cntComposition">
 					<header class="cntHeader">Options</header>
-					<samp class="jsHelpTooltip" title="A <em>chain</em> is a successive group of events. A <em>world boss</em> is usually the final event of a chain."></samp>
 					<br />
 					<h2>Timer</h2>
 					<label title="Hide the chain bars when you check them."><input id="opt_bol_hideChecked" type="checkbox" /> Hide checked off world bosses</label>
