Added syndication section to embed the site

--- a/help.html
+++ b/help.html
@@ -35,6 +35,9 @@
 <p>Additionally, the interim between an event finishes and its followup event starts is also collected (usually this is a preset time, or the time for an NPC to run a place), and all these times are summed to give an estimate of how long an entire chain takes to complete. Although most meta events are now prescheduled and time sorting is moot, the site can still give players a general idea of the battlefield without having to set foot on it.</p>
 </section>
 
+
+
+
 <header id="headerHelp_About" class="jsSection"><img src="img/ui/about.png" alt="About" />About / Contact</header>
 <section>
 
@@ -74,6 +77,33 @@
 <p>&#169; 2012 ArenaNet, Inc. All rights reserved. NCsoft, the interlocking NC logo, ArenaNet, Arena.net, Guild Wars, Guild Wars Factions, Factions, Guild Wars Nightfall, Nightfall, Guild Wars: Eye of the North, Eye of the North, Guild Wars 2, and all associated logos and designs are trademarks or registered trademarks of NCsoft Corporation. All other trademarks are the property of their respective owners.</p>
 
 </section>
+
+
+
+<header id="headerHelp_Syndicate" class="jsSection"><img src="img/ui/favicon.png" alt="Syndicate" />Add To Your Site</header>
+<section>
+	
+<h1>Embed GW2Timer.com</h1>
+<p>All of this website can be integrated into your own site! Here is a <a href="http://gw2timer.com/bin/embed_gw2timer.html">preview of the example's results</a>. The following example code will display the clock pane in Bar style.</p>
+<textarea class="copyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=2" width="377" height="85" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
+<p>Change the height attribute as you please, but the width for the panel is fixed, so making it thinner will show a horizontal scrollbar, and making it wider will show the map pane. The rest of the style is up to you.</p>
+<p>Additionally, you can include commands in the URL so the embedded site executes any of the Options page's settings (this does not override the user's stored settings). Find more <a href="https://en.wikipedia.org/wiki/Query_string">query string</a> commands by clicking &quot;Print Website Memory&quot; on the Options page under Debug.</p>
+<p>Example iframe src:<br />
+http://gw2timer.com/?int_setClock=#<br />
+# = 0 = Compact<br />
+# = 1 = Full<br />
+# = 2 = Bar<br />
+# = 3 = No Clock</p>
+<p>Here is another example code to show the compact clock with Bright background.</p>
+<textarea class="copyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=0&int_setDimming=1" width="377" height="220" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
+<p>And a code to show just the list of world bosses</p>
+<textarea class="copyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=3&bol_expandEvents=false" width="360" height="580" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
+<br />
+<br />
+
+</section>
+
+
 
 
 <header id="headerHelp_Scheduled" class="jsSection"><img src="img/ui/scheduled.png" alt="Scheduled Bosses" />Scheduled Bosses</header>
@@ -120,6 +150,8 @@
 </section>
 
 
+
+
 <header id="headerHelp_Legacy" class="jsSection"><img src="img/event/boss.png" alt="Legacy Bosses" />Legacy Bosses</header>
 <section>
 <p>These bosses give the same rewards as scheduled world bosses, but their chains do not start at a set time--they are asynchronous depending on the megaserver instance (like any regular events). You have to check the places they happen and ask map chat when the chain was last finished so you can wait for it to restart.</p>	
@@ -136,6 +168,8 @@
 <h2>Eye of Zhaitan</h2>
 <p>Take the Rally Waypoint in Straits and run to the <ins data-coord="[15319, 24772]">claw-like structure</ins> in the minimap southeast of Balthazar Temple. Follow the path indicated to get to the catacombs and destroy the <ins data-coord="[15149, 24961]">coffins</ins>, then you'll need to kill three risens, which the hardest to solo is the <ins data-coord="[15309, 25088]">noble</ins>. After you have killed them and waited 15-25 minutes, the <ins data-coord="[16114, 24933]">AA gun and escort mission</ins> will follow, which should also be soloed else three deadly champion abominations will spawn for large groups. Once inside the catacombs, it will take 5-15 people to kill the <ins data-coord="[15192, 24961]">champion abomination</ins> that spawns in the room just before the coffin room. Its single strike will down most players, so strafe and dodge with invulnerability skills equipped. The final boss Eye of Zhaitan is a cakewalk, though you should kill the risen adds that may heal it. <ins data-coord="[15068, 24960]">Escort</ins> the NPCs out the west side of catacombs and the chain will restart in 9-12 minutes. (D3-5)</p>
 </section>
+
+
 
 
 <header id="headerHelp_Temples" class="jsSection"><img src="img/chain/temple.png" alt="Temples" />Temples</header>
@@ -172,6 +206,8 @@ All temples drop 30 dragonite and unlock a <a href="http://wiki.guildwars2.com/w
 <h3>Balthazar Escort</h3>
 <p>The reason why this temple is the rarest to be open is Veteran Risen Subjugators. They have a ludicrous attack (heard as a warhorn) that conjures multiple scattered necro wells that nukes the pact NPCs in 2-3 seconds, and so instantly fails the chain that had been worked so hard on. The sharp turns in the Balthazar <ins data-coord="[15231, 24062]">final escort</ins> route indicates where the subjugators usually spawn (they have multiple random spawns), and there are about 4 waves of them. You should turn enemy names on always so you can quickly find and suppress the subjugators using <a href="http://wiki.guildwars2.com/wiki/Control_effect">crowd control</a> skills and prevent them from ever using their dooming attack. The priority of the mission should be: subjugators, any vets, healing/buffing the NPCs, then finally regular mobs. Once you have made it to the stone slope up to the <ins data-coord="[15046, 24546]">temple</ins>, you have pretty much succeeded the chain, unless the morale bar is 1% left. After the seizing the altar, the priest should be focused using range if the group is small, or melee if large, but nevertheless avoid and ignore the distracting abomination, and in short time the temple will be yours. It will remain open for 1.5-2 hours, until a powerful champion risen wraith comes to reap it back; if you should succeed, the temple will open for another 1-1.5 hours and loops the defense event, otherwise you will need to backtrack to the subchain to repeat Balthazar.</p>
 </section>
+
+
 
 
 <header id="headerHelp_Dungeons" class="jsSection"><img src="img/ui/dungeon.png" alt="Dungeons" />Dungeons</header>
