Fixed IE voice alarm, added Uplands coins

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 	<div id="jsConsoleButtons">
 		<a title="<dfn>Close Console<dfn>" id="jsConsoleButtonClose">[x]</a><a title="<dfn>Select Console<dfn>" id="jsConsoleButtonSelect">[s]</a>
 	</div>
-	<iframe id="jsTTS"></iframe>
+	<iframe id="jsTTSFrame"></iframe>
+	<audio id="jsTTSAudio"></audio>
 	<main id="windowMain">
 	<div id="panelLeft" class="panelMain">
 		<!-- Map, the dummy nbsp is required or Leaflet won't show
