--- a/map.html
+++ b/map.html
@@ -251,45 +251,6 @@ var GW2T_COLLECTIBLE_DATA = {
 	// Must have same name as a Checklist object
 	Collectible0: 
 	{
-		name: "Coin Collector",
-		color: "yellow",
-		wiki: "http://wiki.guildwars2.com/wiki/Lost_coin",
-		credit: "http://dulfy.net/2014/07/01/gw2-coin-collector-prospect-valley-achievement-guide/",
-		needles: [
-		{n: 1, c: [5525, 16723]},
-		{n: 2, c: [5413, 16656]},
-		{n: 3, c: [5415, 16783]},
-		{n: 4, c: [5286, 16560]},
-		{n: 5, c: [5218, 16667]},
-		{n: 6, c: [5249, 16549]},
-		{n: 7, c: [5240, 16427]},
-		{n: 8, c: [5109, 16734]},
-		{n: 9, c: [5139, 16775]},
-		{n: 10, c: [5153, 16703]},
-		{n: 11, c: [4970, 16655]},
-		{n: 12, c: [4925, 16726]},
-		{n: 13, c: [4916, 16697]},
-		{n: 14, c: [4888, 16545]},
-		{n: 15, c: [5096, 16487]},
-		{n: 16, c: [5177, 16275]},
-		{n: 17, c: [5282, 16174]},
-		{n: 18, c: [5412, 16187]},
-		{n: 19, c: [5346, 16214]},
-		{n: 20, c: [5555, 16077]},
-		{n: 21, c: [5520, 16281]},
-		{n: 22, c: [5668, 16191]},
-		{n: 23, c: [5528, 16455]},
-		{n: 24, c: [5393, 16558]},
-		{n: 25, c: [5473, 16462]},
-		{n: 26, c: [5548, 16538]},
-		{n: 27, c: [5557, 16434]},
-		{n: 28, c: [5560, 16511]},
-		{n: 29, c: [5382, 16406]},
-		{n: 30, c: [5367, 16565]}
-		]
-	},
-	Collectible1: 
-	{
 		name: "Dive Master",
 		color: "cyan",
 		wiki: "http://wiki.guildwars2.com/wiki/Diving_Goggles",
@@ -333,6 +294,84 @@ var GW2T_COLLECTIBLE_DATA = {
 		{n: 36, c: [11759, 23978]},
 		{n: 37, c: [11107, 28694]},
 		{n: 38, c: [11304, 26657]}
+		]
+	},
+	Collectible1: 
+	{
+		name: "Coin Collector: Prospect Valley",
+		color: "yellow",
+		wiki: "http://wiki.guildwars2.com/wiki/Lost_coin",
+		credit: "http://dulfy.net/2014/07/01/gw2-coin-collector-prospect-valley-achievement-guide/",
+		needles: [
+		{n: 1, c: [5525, 16723]},
+		{n: 2, c: [5413, 16656]},
+		{n: 3, c: [5415, 16783]},
+		{n: 4, c: [5286, 16560]},
+		{n: 5, c: [5218, 16667]},
+		{n: 6, c: [5249, 16549]},
+		{n: 7, c: [5240, 16427]},
+		{n: 8, c: [5109, 16734]},
+		{n: 9, c: [5139, 16775]},
+		{n: 10, c: [5153, 16703]},
+		{n: 11, c: [4970, 16655]},
+		{n: 12, c: [4925, 16726]},
+		{n: 13, c: [4916, 16697]},
+		{n: 14, c: [4888, 16545]},
+		{n: 15, c: [5096, 16487]},
+		{n: 16, c: [5177, 16275]},
+		{n: 17, c: [5282, 16174]},
+		{n: 18, c: [5412, 16187]},
+		{n: 19, c: [5346, 16214]},
+		{n: 20, c: [5555, 16077]},
+		{n: 21, c: [5520, 16281]},
+		{n: 22, c: [5668, 16191]},
+		{n: 23, c: [5528, 16455]},
+		{n: 24, c: [5393, 16558]},
+		{n: 25, c: [5473, 16462]},
+		{n: 26, c: [5548, 16538]},
+		{n: 27, c: [5557, 16434]},
+		{n: 28, c: [5560, 16511]},
+		{n: 29, c: [5382, 16406]},
+		{n: 30, c: [5367, 16565]}
+		]
+	},
+	Collectible2: 
+	{
+		name: "Coin Collector: Uplands",
+		color: "orange",
+		wiki: "http://wiki.guildwars2.com/wiki/Lost_coin",
+		credit: "http://www.guildnews.de/guides/die-verschlingung-der-grosse-guide/730/3/die-muenzen-aus-dem-hochland/",
+		needles: [
+		{n: 1, c: [5223, 16175]},
+		{n: 2, c: [5034, 16359]},
+		{n: 3, c: [4917, 16389]},
+		{n: 4, c: [4789, 16355]},
+		{n: 5, c: [4759, 16182]},
+		{n: 6, c: [5119, 16201]},
+		{n: 7, c: [5164, 16073]},
+		{n: 8, c: [4874, 16002]},
+		{n: 9, c: [4924, 15825]},
+		{n: 10, c: [4940, 15784]},
+		{n: 11, c: [4789, 15800]},
+		{n: 12, c: [4722, 15780]},
+		{n: 13, c: [4622, 15948]},
+		{n: 14, c: [4562, 15798]},
+		{n: 15, c: [4384, 15773]},
+		{n: 16, c: [4026, 15878]},
+		{n: 17, c: [3950, 15886]},
+		{n: 18, c: [3943, 16136]},
+		{n: 19, c: [4105, 16246]},
+		{n: 20, c: [4217, 16113]},
+		{n: 21, c: [4169, 16253]},
+		{n: 22, c: [4407, 16166]},
+		{n: 23, c: [4660, 16140]},
+		{n: 24, c: [4432, 16350]},
+		{n: 25, c: [4497, 16423]},
+		{n: 26, c: [4546, 16383]},
+		{n: 27, c: [4664, 16375]},
+		{n: 28, c: [4508, 16747]},
+		{n: 29, c: [4566, 16733]},
+		{n: 30, c: [4464, 16790]}
 		]
 	}
 };
@@ -479,6 +518,7 @@ WvW North Camp also has concentrated critters.
 	<dt data-coord="[12140, 13462]">Godslost Swamp</dt><dd>Queensdale ravens and frogs (high concentration at the house porch)</dd>
 	<dt data-coord="[15613, 17626]">Grand Barrier Isle</dt><dd>Bloodtide crows (fast respawn)</dd>
 	<dt data-coord="[22538, 14438]">Hangrammr Climb</dt><dd>Wayfarer ravens</dd>
+	<dt data-coord="[6444, 16747]">Toxal Bog</dt><dd>Brisban mosquitos and frogs</dd>
 	<dt data-coord="[10332, 13437]">Altar's Windings</dt><dd>Queensdale chickens</dd>
 	<dt data-coord="[5901, 21550]">Idea Incubation Lab</dt><dd>Rata Sum lightning bugs occasionally scutter in a large group</dd>
 </dl>
