Upgraded ZeroClipboard to work with IE

--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
 				</g>
 			</svg>
 			<div id="itemClockWaypoints">
-				<img id="itemClockWaypoint0" src="img/map/waypoint.png" alt="X:00 Waypoint">
-				<img id="itemClockWaypoint1" src="img/map/waypoint.png" alt="X:15 Waypoint">
-				<img id="itemClockWaypoint2" src="img/map/waypoint.png" alt="X:30 Waypoint">
-				<img id="itemClockWaypoint3" src="img/map/waypoint.png" alt="X:45 Waypoint">
+				<img id="itemClockWaypoint0" class="itemClockWaypointClip" src="img/ui/placeholder.png" alt="X:00 Waypoint">
+				<img id="itemClockWaypoint1" class="itemClockWaypointClip" src="img/ui/placeholder.png" alt="X:15 Waypoint">
+				<img id="itemClockWaypoint2" class="itemClockWaypointClip" src="img/ui/placeholder.png" alt="X:30 Waypoint">
+				<img id="itemClockWaypoint3" class="itemClockWaypointClip" src="img/ui/placeholder.png" alt="X:45 Waypoint">
 			</div>
 			<time id="itemTimeLocal" class="itemTimeDigital"><var id="itemTimeLocalActual">00:00</var><var id="itemTimeLocalExtra"></var></time>
 			<time id="itemTimeServer" class="itemTimeDigital">16:00</time>
