Added story event map icons

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
 	<!-- Web application files  -->
+	<script type="text/javascript" src="config.js"></script>
 	<script type="text/javascript" src="plugins.js"></script>
 	<script type="text/javascript" src="zones.js"></script>
 	<script type="text/javascript" src="chains.js"></script>
@@ -288,7 +289,7 @@
 					<br />
 					<h2>Map</h2>
 					<label title="Automatically scroll the map to the next predicted event. You'll need to be on the chains page."><input id="opt_bol_tourPrediction" type="checkbox" /> Tour predicted events</label>
-					<label title="Show/Hide the colored lines of the event paths."><input id="opt_bol_showChainPaths" type="checkbox" /> Show chain paths</label>
+					<label title="Show/Hide the colored lines of the event paths."><input id="opt_bol_showChainPaths" type="checkbox" /> Show chain paths and event icons</label>
 					<label title="Show/Hide the map area on the left."><input id="opt_bol_showMap" type="checkbox" /> Show the map</label>
 					<br />
 					<h2>Alarm</h2>
