--- a/help.html
+++ b/help.html
@@ -84,7 +84,7 @@
 <section>
 	
 <h1>Embed GW2Timer.com</h1>
-<p>All of this website can be integrated into your own site! Here is a <a href="http://gw2timer.com/bin/embed_gw2timer.html">preview of the example's results</a>. The following example code will display the clock pane in Bar style.</p>
+<p>All of this website can be integrated into your own site! Here is a <a href="http://forum.renaka.com/topic/5547304/">preview of the example's results</a>. The following example code will display the clock pane in Bar style.</p>
 <textarea class="jsCopyCode" cols="35" rows="6"><iframe src="http://gw2timer.com/?int_setClock=2" width="377" height="85" seamless="seamless" style="border: 1px solid #444; box-shadow: 0px 0px 12px #223;"></iframe></textarea>
 <p>Change the height attribute as you please, but the width for the panel is fixed, so making it thinner will show a horizontal scrollbar, and making it wider will show the map pane. The rest of the style is up to you.</p>
 <p>Additionally, you can include commands in the URL so the embedded site executes any of the Options page's settings (this does not override the user's stored settings). Find more <a href="https://en.wikipedia.org/wiki/Query_string">query string</a> commands by clicking &quot;Print Website Memory&quot; on the Options page under Debug.</p>
