--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 					<br />
 					<h2>Debug</h2>
 					<div class="optButtons">
-						<button id="optPrintLocalStorage" title="Read what is stored in your browser for this website. Most of these key-value pairs can be overriden directly via URL query string. Example: http://gw2timer.com/?bol_showClock=false&amp;int_setPredictor=3">Print Website Memory</button>
+						<button id="optPrintLocalStorage" title="Read what is stored in your browser for this website. Most of these key-value pairs can be overriden directly via URL query string. Example: http://gw2timer.com/?bol_showMap=false&amp;int_setPredictor=3">Print Website Memory</button>
 						<div id="optTimestamps">
 							<div><time id="optTimestampServerReset">00:00</time> Next Server Reset (<time id="optTimeTillReset">00:00</time>)</div>
 							<div><time id="optTimestampUTC">00:00</time> UNIX Timestamp</div>
