--- a/map.html
+++ b/map.html
@@ -72,6 +72,7 @@ var GW2T_RESOURCE_DATA = {
 	},
 	Mithril: {
 		nodes: [
+		[4429, 15891], // dry
 		[21340, 10767], // frostgorge
 		[22193, 9463], // frostgorge
 		[27087, 9023], // fireheart
@@ -86,6 +87,7 @@ var GW2T_RESOURCE_DATA = {
 	Orichalcum: {
 		approx: true,
 		nodes: [
+		[5023, 16529], // dry
 		[11939, 20363], // southsun
 		[12409, 19473],
 		[12032, 19858],
@@ -165,6 +167,7 @@ var GW2T_RESOURCE_DATA = {
 	},
 	Lettuce: {
 		nodes: [
+		[4011, 15893], // dry
 		[10569, 16278], // queensdale
 		[13101, 12254] // queensdale
 		], type: "Plant"
@@ -197,6 +200,7 @@ var GW2T_RESOURCE_DATA = {
 	},
 	Cabbage: {
 		nodes: [
+		[4001, 15893], // dry
 		[13880, 11060], // harathi
 		[21212, 16264], // dredgehaunt
 		[30955, 13247] // blazeridge
@@ -518,9 +522,9 @@ WvW North Camp also has concentrated critters.
 	<dt data-coord="[12140, 13462]">Godslost Swamp</dt><dd>Queensdale ravens and frogs (high concentration at the house porch)</dd>
 	<dt data-coord="[15613, 17626]">Grand Barrier Isle</dt><dd>Bloodtide crows (fast respawn)</dd>
 	<dt data-coord="[22538, 14438]">Hangrammr Climb</dt><dd>Wayfarer ravens</dd>
-	<dt data-coord="[6444, 16747]">Toxal Bog</dt><dd>Brisban mosquitos and frogs</dd>
+	<dt data-coord="[8276, 19892]">Loch Jezt</dt><dd>Metrica frogs and crabs hylek village</dd>
 	<dt data-coord="[10332, 13437]">Altar's Windings</dt><dd>Queensdale chickens</dd>
-	<dt data-coord="[5901, 21550]">Idea Incubation Lab</dt><dd>Rata Sum lightning bugs occasionally scutter in a large group</dd>
+	<dt data-coord="[6444, 16747]">Toxal Bog</dt><dd>Brisban mosquitos and frogs</dd>
 </dl>
 <br />
 
