Added Buried Locked Chests

--- a/map.html
+++ b/map.html
@@ -72,7 +72,6 @@ var GW2T_RESOURCE_DATA = {
 	},
 	Mithril: {
 		nodes: [
-		[4429, 15891], // dry
 		[21340, 10767], // frostgorge
 		[22193, 9463], // frostgorge
 		[27087, 9023], // fireheart
@@ -376,6 +375,40 @@ var GW2T_COLLECTIBLE_DATA = {
 		{n: 28, c: [4508, 16747]},
 		{n: 29, c: [4566, 16733]},
 		{n: 30, c: [4464, 16790]}
+		]
+	},
+	Collectible3: 
+	{
+		name: "Buried Locked Chest",
+		color: "sienna",
+		wiki: "http://wiki.guildwars2.com/wiki/Buried_Locked_Chest",
+		credit: "https://www.youtube.com/watch?v=z1lzlE5RLJQ",
+		needles: [
+		{n: 1, c: [5396, 16252], t: "Roof over door"},
+		{n: 2, c: [5558, 16564], t: "Front of rubble"},
+		{n: 3, c: [5418, 16535], t: "Rubble with haystack"},
+		{n: 4, c: [5310, 16186], t: "Roof corner"},
+		{n: 5, c: [5276, 16256], t: "Balcony corner"},
+		{n: 6, c: [5406, 16592], t: "Ground by cliff"},
+		{n: 7, c: [5331, 16559], t: "Puddle for dive"},
+		{n: 8, c: [5468, 16721], t: "Ledge under jump crystal"},
+		{n: 9, c: [5463, 16654], t: "Ledge corner by boat rubble"},
+		{n: 10, c: [5249, 16508], t: "Ground by cliff"},
+		{n: 11, c: [5168, 16678], t: "Cliff rocks by giant vine"},
+		{n: 12, c: [5468, 16455], t: "V shaped ledge near ground"},
+		{n: 13, c: [4923, 16698], t: "Ledge above Nochtli's cave entrance"},
+		{n: 14, c: [5377, 16514], t: "Ground cliff corner"},
+		{n: 15, c: [5333, 16637], t: "Plateau one level above ground"},
+		{n: 16, c: [5512, 16299], t: "Quicksand river start"},
+		{n: 17, c: [5141, 16560], t: "Plateau below the topmost plateau"},
+		{n: 18, c: [5088, 16752], t: "Cliff corner below the topmost cliff"},
+		{n: 19, c: [5407, 16561], t: "Cliff corner one level above ground"},
+		{n: 20, c: [5289, 16626], t: "Cliff corner by big white sail"},
+		{n: 21, c: [5368, 16625], t: "Large bamboo on third level plateau"},
+		{n: 22, c: [5396, 16516], t: "Third level plateau near lightning crystal"},
+		{n: 23, c: [5385, 16604], t: "Top level plateau by white sails"},
+		{n: 24, c: [5535, 16594], t: "Cliff corner two levels above ground"},
+		{n: 25, c: [5136, 16392], t: "Veteran Warthog cave"}
 		]
 	}
 };
