More chest locations

--- a/map.html
+++ b/map.html
@@ -408,7 +408,9 @@ var GW2T_COLLECTIBLE_DATA = {
 		{n: 22, c: [5396, 16516], t: "Third level plateau near lightning crystal"},
 		{n: 23, c: [5385, 16604], t: "Top level plateau by white sails"},
 		{n: 24, c: [5535, 16594], t: "Cliff corner two levels above ground"},
-		{n: 25, c: [5136, 16392], t: "Veteran Warthog cave"}
+		{n: 25, c: [5225, 16698], t: "Ground corner under plateau"},
+		{n: 26, c: [5485, 16222], t: "Top of cliff wall"},
+		{n: 27, c: [5136, 16392], t: "Veteran Warthog cave"}
 		]
 	}
 };
