Few more chests

--- a/map.html
+++ b/map.html
@@ -410,7 +410,12 @@ var GW2T_COLLECTIBLE_DATA = {
 		{n: 24, c: [5535, 16594], t: "Cliff corner two levels above ground"},
 		{n: 25, c: [5225, 16698], t: "Ground corner under plateau"},
 		{n: 26, c: [5485, 16222], t: "Top of cliff wall"},
-		{n: 27, c: [5136, 16392], t: "Veteran Warthog cave"}
+		{n: 27, c: [5136, 16392], t: "Veteran Warthog cave"},
+		{n: 28, c: [4790, 16351], t: "Below curved cliff corridor"},
+		{n: 29, c: [4772, 16173], t: "Ground large flat rock between two cliffs"},
+		{n: 30, c: [5078, 16319], t: "Ledge one level above jump crystal"},
+		{n: 31, c: [5184, 16047], t: "Top ledge at canyon start"},
+		{n: 32, c: [5030, 16521], t: "Rocks on top plateau"}
 		]
 	}
 };
@@ -641,7 +646,7 @@ You may need to complete the heart before you can purchase.
 <div class="mapLegendLine" style="border-bottom: 2px solid lime"></div> <strong>Exact</strong> location of that node<br />
 <div class="mapLegendLine" style="border-bottom: 2px dotted lime"></div> <strong>Approximate</strong> vicinity of that node<br />
 <div class="mapLegendLine" style="border-bottom: 2px dashed lime"></div> <strong>Map</strong> has that resource (not a node)<br />
-Rich and T6 nodes reset in about 22 hours after gathering; T1-T5 nodes reset in about 2 hours. You can use alts to re-gather any node. More <a href="http://wiki.guildwars2.com/wiki/Resource#Harvesting">plants</a> on the wiki. Click a resource node icon on the map to zoom in/out.<br />
+Rich and T6 nodes reset in about 22 hours after gathering; T1-T5 nodes reset in about 1 hour. You can use alts to re-gather any node. More <a href="http://wiki.guildwars2.com/wiki/Resource#Harvesting">plants</a> on the wiki. Click a resource node icon on the map to zoom in/out.<br />
 </section>
 
 
