--- a/map.html
+++ b/map.html
@@ -411,7 +411,7 @@ var GW2T_COLLECTIBLE_DATA = {
 		{n: 25, c: [5225, 16698], t: "Ground corner under plateau"},
 		{n: 26, c: [5485, 16222], t: "Top of cliff wall"},
 		{n: 27, c: [5136, 16392], t: "Veteran Warthog cave"},
-		{n: 28, c: [4790, 16351], t: "Below curved cliff corridor"},
+		{n: 28, c: [4790, 16351], t: "Corridor below curved cliff"},
 		{n: 29, c: [4772, 16173], t: "Ground large flat rock between two cliffs"},
 		{n: 30, c: [5078, 16319], t: "Ledge one level above jump crystal"},
 		{n: 31, c: [5184, 16047], t: "Top ledge at canyon start"},
