Fix clean URL #1

--- a/404.html
+++ b/404.html
@@ -38,7 +38,7 @@
 	 */
 	var getNewLocation = function()
 	{
-		var loc = document.location;
+		var loc = document.location.toString();
 		var newloc = "";
 		var base = "http://gw2timer.com/";
 		var primer = "gw2timer.com/";
