Fix clean URL #2

--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- Meta -->
-	<title>GW2Timer.com URL</title>
+	<title>GW2Timer.com Clean URL</title>
 	<meta charset="utf-8" />
 	<meta name="robots" content="noindex, nofollow, noarchive" />
 <!-- Google Analytics -->
