--- a/mapsrc.html
+++ b/mapsrc.html
@@ -87,6 +87,7 @@ var GW2T_RESOURCE_DATA = {
 		approx: true,
 		nodes: [
 		[5023, 16529], // dry
+		[5170, 16294],
 		[11939, 20363], // southsun
 		[12409, 19473],
 		[12032, 19858],
@@ -248,7 +249,7 @@ var GW2T_RESOURCE_DATA = {
 		[11069, 27131]
 		], type: "Plant"
 	}
-}
+};
 
 var GW2T_COLLECTIBLE_DATA = {
 	// Must have same name as a Checklist object
@@ -380,42 +381,77 @@ var GW2T_COLLECTIBLE_DATA = {
 	Collectible3: 
 	{
 		name: "Buried Locked Chest",
-		color: "sienna",
+		color: "cornsilk",
 		wiki: "http://wiki.guildwars2.com/wiki/Buried_Locked_Chest",
-		credit: "https://www.youtube.com/watch?v=z1lzlE5RLJQ",
+		credit: "http://www.mattsta.ninja/dry-top/",
 		needles: [
-		{n: 1, c: [5396, 16252], t: "Roof over door"},
-		{n: 2, c: [5558, 16564], t: "Front of rubble"},
-		{n: 3, c: [5418, 16535], t: "Rubble with haystack"},
-		{n: 4, c: [5310, 16186], t: "Roof corner"},
-		{n: 5, c: [5276, 16256], t: "Balcony corner"},
-		{n: 6, c: [5406, 16592], t: "Ground by cliff"},
-		{n: 7, c: [5331, 16559], t: "Puddle for dive"},
-		{n: 8, c: [5468, 16721], t: "Ledge under jump crystal"},
-		{n: 9, c: [5463, 16654], t: "Ledge corner by boat rubble"},
-		{n: 10, c: [5249, 16508], t: "Ground by cliff"},
-		{n: 11, c: [5168, 16678], t: "Cliff rocks by giant vine"},
-		{n: 12, c: [5468, 16455], t: "V shaped ledge near ground"},
-		{n: 13, c: [4923, 16698], t: "Ledge above Nochtli's cave entrance"},
-		{n: 14, c: [5377, 16514], t: "Ground cliff corner"},
-		{n: 15, c: [5333, 16637], t: "Plateau one level above ground"},
-		{n: 16, c: [5512, 16299], t: "Quicksand river start"},
-		{n: 17, c: [5141, 16560], t: "Plateau below the topmost plateau"},
-		{n: 18, c: [5088, 16752], t: "Cliff corner below the topmost cliff"},
-		{n: 19, c: [5407, 16561], t: "Cliff corner one level above ground"},
-		{n: 20, c: [5289, 16626], t: "Cliff corner by big white sail"},
-		{n: 21, c: [5368, 16625], t: "Large bamboo on third level plateau"},
-		{n: 22, c: [5396, 16516], t: "Third level plateau near lightning crystal"},
-		{n: 23, c: [5385, 16604], t: "Top level plateau by white sails"},
-		{n: 24, c: [5535, 16594], t: "Cliff corner two levels above ground"},
-		{n: 25, c: [5225, 16698], t: "Ground corner under plateau"},
-		{n: 26, c: [5485, 16222], t: "Top of cliff wall"},
-		{n: 27, c: [5136, 16392], t: "Veteran Warthog cave"},
-		{n: 28, c: [4790, 16351], t: "Corridor below curved cliff"},
-		{n: 29, c: [4772, 16173], t: "Ground large flat rock between two cliffs"},
-		{n: 30, c: [5078, 16319], t: "Ledge one level above jump crystal"},
-		{n: 31, c: [5184, 16047], t: "Top ledge at canyon start"},
-		{n: 32, c: [5030, 16521], t: "Rocks on top plateau"}
+		{n: 1, c: [5267, 16289], i: "NvmBoaw"},
+		{n: 2, c: [5276, 16256], i: "Xdf8z7Q"},
+		{n: 3, c: [5310, 16186], i: "Bw6OTEN"},
+		{n: 4, c: [5396, 16252], i: "tOMC85i"},
+		{n: 5, c: [5485, 16222], i: "lkcIL2O"},
+		{n: 6, c: [5568, 16118], i: "iGjtfrZ"},
+		{n: 7, c: [5512, 16299], i: "otHDoYQ"},
+		{n: 8, c: [5532, 16381], i: "qrU1XSr"},
+		{n: 9, c: [5468, 16455], i: "RDkCnH8"},
+		{n: 10, c: [5377, 16514], i: "FmIfYPt"},
+		{n: 11, c: [5406, 16592], i: "jxMmbT8"},
+		{n: 12, c: [5331, 16559], i: "ZmFmNNC"},
+		{n: 13, c: [5289, 16626], i: "hDvd7TO"},
+		{n: 14, c: [5333, 16637], i: "x6OI6e9"},
+		{n: 15, c: [5225, 16698], i: "9RjKjjE"},
+		{n: 16, c: [5281, 16762], i: "VzoTuEr"},
+		{n: 17, c: [5257, 16821], i: "QRK0w6C"},
+		{n: 18, c: [5345, 16711], i: "vCiCRf9"},
+		{n: 19, c: [5468, 16721], i: "LLsEubL"},
+		{n: 20, c: [5463, 16654], i: "NcgixZq"},
+		{n: 21, c: [5368, 16625], i: "8cbVhYB"},
+		{n: 22, c: [5407, 16561], i: "YqDBBmg"},
+		{n: 23, c: [5396, 16516], i: "4t18k1J"},
+		{n: 24, c: [5558, 16564], i: "ZTiy9vC"},
+		{n: 25, c: [5535, 16594], i: "1uNpwbe"},
+		{n: 26, c: [5418, 16535], i: "7orCJrj"},
+		{n: 27, c: [5385, 16604], i: "CYIVXAu"},
+		{n: 28, c: [5249, 16508], i: "h33KOBP"},
+		{n: 29, c: [5136, 16392], i: "Lt1Qbg1"},
+		{n: 30, c: [5141, 16560], i: "ngqmZhC"},
+		{n: 31, c: [5168, 16678], i: "p0UhkQh"},
+		{n: 32, c: [5078, 16497], i: "msWUvMm"},
+		{n: 33, c: [5030, 16521], i: "qnN4Ffb"},
+		{n: 34, c: [5088, 16752], i: "tfNh0tH"},
+		{n: 35, c: [4923, 16698], i: "Q78XIcl"},
+		{n: 36, c: [4881, 16616], i: "1ly4eqA"},
+		{n: 37, c: [4976, 16649], i: "7AgAITy"},
+		{n: 38, c: [4952, 16461], i: "6qBQq4n"},
+		{n: 39, c: [5088, 16354], i: "3yebdfp"},
+		{n: 40, c: [4994, 16345], i: "xo2swdc"},
+		{n: 41, c: [5078, 16319], i: "puG7aEE"},
+		{n: 42, c: [4750, 16358], i: "gv6QG81"},
+		{n: 43, c: [4790, 16351], i: "KJbXPAu"},
+		{n: 44, c: [4772, 16173], i: "DEQPh79"},
+		{n: 45, c: [5184, 16047], i: "eNuJ3IH"},
+		{n: 46, c: [5173, 15921], i: "1afdXXg"},
+		{n: 47, c: [5002, 15877], i: "TOuE9B9"},
+		{n: 48, c: [4874, 15781], i: "O3PTbZA"},
+		{n: 49, c: [4782, 15987], i: "pWNi0X1"},
+		{n: 50, c: [4689, 16000], i: "VYmTrbn"},
+		{n: 51, c: [4681, 15860], i: "L28U7ho"},
+		{n: 52, c: [4454, 15972], i: "pO8oTya"},
+		{n: 53, c: [4408, 15889], i: "x6JSg4r"},
+		{n: 54, c: [4406, 15820], i: "iXf51Gf"},
+		{n: 55, c: [4008, 16090], i: "QR1tHUF"},
+		{n: 56, c: [4143, 16113], i: "HUNpmn9"},
+		{n: 57, c: [3939, 16198], i: "8FcA6ev"},
+		{n: 58, c: [4571, 16172], i: "0h4Gr81"},
+		{n: 59, c: [4556, 16333], i: "FrV27hs"},
+		{n: 60, c: [4538, 16392], i: "3y9rJFY"},
+		{n: 61, c: [4430, 16409], i: "RJRJI5n"},
+		{n: 62, c: [4412, 16350], i: "CJ8Imz0"},
+		{n: 63, c: [4319, 16416], i: "9Js0NCw"},
+		{n: 64, c: [4461, 16607], i: "NU3KvWr"},
+		{n: 65, c: [4643, 16583], i: "R1bpzSr"},
+		{n: 66, c: [4466, 16762], i: "OJdXUco"},
+		{n: 67, c: [4532, 16805], i: "omxcCnS"}
 		]
 	}
 };
