--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@
 				<img id="itemClockWaypoint1" class="itemClockWaypointClip" src="img/ui/placeholder.png" alt="X:15 Waypoint">
 				<img id="itemClockWaypoint2" class="itemClockWaypointClip" src="img/ui/placeholder.png" alt="X:30 Waypoint">
 				<img id="itemClockWaypoint3" class="itemClockWaypointClip" src="img/ui/placeholder.png" alt="X:45 Waypoint">
+				<img id="itemClockStar0" class="itemClockStarClip" src="img/ui/placeholder.png" alt="X:00 Waypoint">
+				<img id="itemClockStar1" class="itemClockStarClip" src="img/ui/placeholder.png" alt="X:15 Waypoint">
 			</div>
 			<time id="itemTimeLocal" class="itemTimeDigital"><var id="itemTimeLocalActual">00:00</var><var id="itemTimeLocalExtra"></var></time>
 			<time id="itemTimeServer" class="itemTimeDigital">16:00</time>
@@ -293,6 +295,7 @@
 					<label title="Automatically scroll the map to the next predicted event. You'll need to be on the chains page."><input id="opt_bol_tourPrediction" type="checkbox" /> Tour predicted events</label>
 					<label title="Show/Hide the colored lines of the event paths."><input id="opt_bol_showChainPaths" type="checkbox" /> Show chain paths and event icons</label>
 					<label title="Show/Hide the map area on the left."><input id="opt_bol_showMap" type="checkbox" /> Show the map</label>
+					<label title="Show/Hide the POIs (Points of Interest). Will increase initial site load time if enabled."><input id="opt_bol_showPOIs" type="checkbox" /> Show POIs markers</label>
 					<br />
 					<h2>Alarm</h2>
 					<span>Voice announcement requires Chrome, Firefox, or IE9+. Multilingualism is only available for Chrome. Click the speaker icon on the chains page to toggle sound.</span>
@@ -306,9 +309,12 @@
 					<label><input id="opt_int_alertSubscribedFirst" type="number" min="0" max="30" step="1" /> First Alarm</label>
 					<label><input id="opt_int_alertSubscribedSecond" type="number" min="0" max="30" step="1" /> Second Alarm</label>
 					<br />
-					<h2>Advanced</h2>
+					<h2>Daily</h2>
 					<label title="Automatically clear the boss checklist on the daily reset time."><input id="opt_bol_clearChainChecklistOnReset" type="checkbox" /> Clear boss checklist on server reset (Midnight UTC)</label>
 					<label title="Automatically clear the dungeon and custom checklist on the daily reset time."><input id="opt_bol_clearPersonalChecklistOnReset" type="checkbox" /> Clear personal checklist on server reset</label>
+					<br />
+					<h2>Advanced</h2>
+					<label title="Promote GW2Timer.com by including the site's name in auto-copied clipboard text. Changes will take effect when the next chain starts."><input id="opt_bol_useSiteTag" type="checkbox" /> Affix site tag to clipboard text</label>
 					<label title="DST for showing ArenaNet Washington-US time."><input id="opt_bol_detectDST" type="checkbox" /> Detect Daylight Saving Time</label>
 					<label title="13:00:00 or 1:00:00 PM"><input id="opt_bol_use24Hour" type="checkbox" /> Use 24 hour format</label>
 					<br />
